<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout

xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lokico.PSWind.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@drawable/backgroudimage">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_widthPercent="50%"
        android:text="@string/title_activity_omni_map"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:layout_marginTopPercent="5%"
        android:background="#80FFFFFF"
        android:enabled="true"
        android:onClick="launchOmniMap" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_widthPercent="50%"
        android:text="@string/title_activity_tjs_seattle"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:background="#80FFFFFF"
        app:layout_marginTopPercent="5%"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:enabled="true"
        android:onClick="launchTJsSeattle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_widthPercent="50%"
        android:text="@string/title_activity_tjs_north_sound"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:background="#80FFFFFF"
        app:layout_marginTopPercent="5%"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:enabled="true"
        android:onClick="launchTJsNorthSeattle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_widthPercent="50%"
        android:text="@string/title_activity_noaa"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:background="#80FFFFFF"
        app:layout_marginTopPercent="5%"
        android:layout_centerHorizontal="true"
        android:onClick="launchNOAA"
        android:clickable="true" />
</android.support.percent.PercentRelativeLayout>
